[gd_scene load_steps=11 format=3 uid="uid://cowk3dnprnnir"]

[ext_resource type="Script" path="res://scripts/scene_1.gd" id="1_bluwh"]
[ext_resource type="Texture2D" uid="uid://b3x64q4rpdgvd" path="res://assets/background/throne_room.png" id="2_s8c3i"]
[ext_resource type="Texture2D" uid="uid://cvf54hgp2eijv" path="res://assets/ui/message_window_1.png" id="2_ygjrn"]
[ext_resource type="Texture2D" uid="uid://ca525to53ksl0" path="res://assets/portraits/princess_outfit_1.png" id="3_65em3"]
[ext_resource type="Texture2D" uid="uid://hmdgu8uyd35u" path="res://assets/portraits/king.png" id="3_dsxt3"]
[ext_resource type="Texture2D" uid="uid://cbhckgwowu4dl" path="res://assets/portraits/mysterious_man.png" id="4_2l44r"]
[ext_resource type="Texture2D" uid="uid://k72v007dxr2r" path="res://assets/ui/ui_next_button.gif" id="4_qw1y3"]
[ext_resource type="Texture2D" uid="uid://w23mgl37apm0" path="res://assets/portraits/princess_outfit_1_head_neutral.png" id="4_ueio4"]
[ext_resource type="Texture2D" uid="uid://b6yw05pue20u" path="res://assets/ui/ui_next_button_hover.gif" id="5_xr1n3"]
[ext_resource type="Theme" uid="uid://dejysjjwhwal8" path="res://data/theme/title_theme.tres" id="10_t5p4s"]

[node name="Scene1" type="CanvasLayer"]
script = ExtResource("1_bluwh")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -149.0
offset_top = 1.0
offset_right = 1333.0
offset_bottom = 666.0
texture = ExtResource("2_s8c3i")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -17.0
offset_right = -1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0156863, 0.0156863, 0.564706)
metadata/_edit_lock_ = true

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="King" type="Sprite2D" parent="."]
position = Vector2(333, 345)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_dsxt3")
flip_h = true

[node name="MysteriousMan" type="Sprite2D" parent="."]
position = Vector2(318, 339)
scale = Vector2(1.595, 1.3)
texture = ExtResource("4_2l44r")
flip_h = true

[node name="MainCharacter" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = -257.0
offset_right = 568.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="body" type="Sprite2D" parent="MainCharacter"]
position = Vector2(-70, 208)
texture = ExtResource("3_65em3")
centered = false

[node name="head" type="Sprite2D" parent="MainCharacter"]
position = Vector2(235, 127)
texture = ExtResource("4_ueio4")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -462.0
offset_top = -230.0
offset_right = 477.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_ygjrn")
expand_mode = 3
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
custom_minimum_size = Vector2(800, 160)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 28.0
offset_right = -110.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(52, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.4285
offset_top = -77.0
offset_right = -23.4285
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
action_mode = 0
texture_normal = ExtResource("4_qw1y3")
texture_hover = ExtResource("5_xr1n3")

[node name="TutorialPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -159.0
offset_right = 245.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_t5p4s")

[node name="TutorialText" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 21.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.94902, 0.368627, 0.576471, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][b]Welcome to Just a Girl's Dungeon Quest![/b]

[font_size={25}]How to play:[/font_size]
Use the arrow keys to select where you want to go.
Complete dungeons and traverse the story.

Press ENTER or SPACE to continue...[/center]"
scroll_active = false

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]
